fixed mobile bug where image would stretch vertically

--- a/style.css
+++ b/style.css
@@ -1,3 +1,7 @@
+img {
+  width: 100%;
+}
+
 html {
   font-family: 'Montserrat', sans-serif;
   font-size: 14px;
@@ -84,7 +88,6 @@ h1 {
 
   .card_img--desktop {
     display: block;
-    width: 100%;
     max-width: 50%;
   }
 
